feat: QPPA-10211 Update modernizer-maven-plugin